Menu: fix truncation related bugs #984

--- a/src/less/menu-button/base/menu-button.less
+++ b/src/less/menu-button/base/menu-button.less
@@ -86,22 +86,26 @@ div.menu-button__item[role^="menuitem"][aria-checked="true"] svg.icon {
     opacity: 1;
 }
 
+.menu-button__menu--fix-width,
+.fake-menu-button__menu--fix-width {
+    width: 100%;
+
+    span {
+        .truncate();
+
+        width: 100%;
+    }
+}
+
 a.fake-menu-button__item span,
 button.fake-menu-button__item span,
 div.menu-button__item[role^="menuitem"] span {
-    .truncate();
-
     flex: 1 0 auto;
-    width: 100%;
+    white-space: nowrap;
 }
 
 .menu-button__menu--scroll {
     overflow-y: scroll;
-}
-
-.menu-button__menu--fix-width,
-.fake-menu-button__menu--fix-width {
-    width: 100%;
 }
 
 .menu-button__menu--reverse,
